--- a/5.자료구조와 자료형/5-4 배열/배열.md
+++ b/5.자료구조와 자료형/5-4 배열/배열.md
@@ -8,3 +8,22 @@
 
     let arr = new Array();
     let arr = [];
+
+배열 접근
+
+    arr[0]
+
+배열에 담긴 요소 개수 
+
+    arr.length
+
+배열 요소 전체 출력
+
+    console.log(arr);
+
+배열 요소의 자료형엔 제약이 없다.
+
+>**trailing쉼표**<br>
+배열의 마지막 요소는 객체와 마찬가지로 쉼표로 끝날 수 있다. 
+
+* * *
