--- a/5.자료구조와 자료형/5-4 배열/배열.md
+++ b/5.자료구조와 자료형/5-4 배열/배열.md
@@ -13,9 +13,18 @@
 
     arr[0]
 
-배열에 담긴 요소 개수 
+
+배열에 담긴 요소 개수 확인
 
     arr.length
+
+배열 마지막 요소 삭제
+
+    arr.pop()
+
+배열 범위 지정해서 자르기
+
+    arr.splice(시작 index, 삭제갯수)
 
 배열 요소 전체 출력
 
@@ -27,3 +36,4 @@
 배열의 마지막 요소는 객체와 마찬가지로 쉼표로 끝날 수 있다. 
 
 * * *
+
