--- a/dom/webComponent/2.customElements.md
+++ b/dom/webComponent/2.customElements.md
@@ -135,28 +135,27 @@ customElements.define("time-formatted", TimeFormatted); // (2)
 
 ---
 
-### `connectedCallback`에서 렌더링 된다. ,  `constructor`가 아니라. 
+### `constructor`가 아니라 `connectedCallback`에서 렌더링 된다. ,  
 
 위의 예에서 요소 콘텐츠는 `connectedCallback`에서 렌더링(생성)됩니다. 
 
 왜 `constructor`이 아닌가?
 
-이유는 간단합니다: `constructor`이 호출되었을 때, 아직 이르다고 합니다. element가 생성되었지만 브라우저는 아직 이 단계에서 속성을 처리/할당하지 않았습니다: `getAttribute`를 호출하면  `null`이 반환될 것 입니다. 따라서 실제로 렌더링할 수 없습니다.
+**이유는 간단합니다**: `constructor`이 호출되었을 때, 아직 이르다고 판단합니다. element가 생성되었지만 브라우저는 아직 이 단계에서 속성을 처리/할당하지 않았습니다: `getAttribute`를 호출하면  `null`이 반환될 것 입니다. 따라서 실제로 렌더링할 수 없습니다.
 
 또한, 생각해보면 정말 필요할 때까지 작업을 지연시키는 것이 성과 측면에서 더 좋습니다.
 
-그 `connectedCallback` 요소가 문서에 추가될 때 트리거됩니다.. 자식으로써 다른 요소에 추가되었을 뿐만 아니라 실제로 페이지의 일부가 됩니다. 따라서 분리된 DOM을 구축하고 요소를 생성하여 나중에 사용할 수 있도록 준비할 수 있습니다. 페이지에 들어갈 때만 실제로 렌더링됩니다.
+ `connectedCallback`은 요소가 문서에 추가될 때 트리거됩니다. 자식으로써 다른 요소에 추가되었을 뿐만 아니라 실제로 페이지의 일부가 됩니다. 따라서 분리된 DOM을 구축하고 요소를 생성하여 나중에 사용할 수 있도록 준비할 수 있습니다. 페이지에 들어갈 때만 실제로 렌더링됩니다.
 
 ## Observing attributes 옵저버 속성
 `<time-formatted>`가 현재 실행되는 도중, 요소가 렌더링된 후에는 추가 속성 변경이 아무런 영향을 미치지 않습니다. HTML 요소치고는 이상한 일입니다. 일반적으로 `a.href`,와 같은 속성을 변경할 때는 변경 사항이 즉시 가시화될 것으로 예상합니다. 그럼 이 문제를 해결해 보겠습니다.
 
-우리는 속성을 관찰할 수 있다 observer() static getter 안에서 우리의 리스트를  제공함으로써 
 
 `observedAttributes()` static getter 안에서 그 속성들의 목록을 제공함으로써 우리는 속성을 관찰할 수 있습니다. 
 
 이러한 속성의 경우, `attributeChangedCallback` 를 수정할 때 호출합니다. 이것은 성능상의 이유로 속성에 대해 트리거되지 않습니다.
 
-여기 속성이 변경될 때 자동으로 updates되는 새로운 `<time-formatted>`가 있다.
+여기 속성이 변경될 때 자동으로 updates되는 새로운 `<time-formatted>`가 있습니다.
 
 ```js
 <script>
@@ -209,18 +208,24 @@ setInterval(() => elem.setAttribute('datetime', new Date()), 1000); // (5)
 
 2. 요소를 페이지에 삽입하면 한 번 호출합니다.
 
-3. 속성 변경의 경우 다음에 나열되어 있습니다. `observedAttributes()`, `attributeChangedCallback` 트리거.
+3. 속성 변경의 경우 다음에 나열되어 있습니다. - `observedAttributes()`, `attributeChangedCallback` 트리거.
 4. ...요소를 다시 renders합니다.
 5. 마지막에는 라이브 타이머를 쉽게 만들 수 있습니다.
 
 ---
 
 ## Rendering order
-HTML parser가 DOM을 구축하면 부모가 자녀보다 먼저 요소가 차례로 처리됩니다. 예: `<outer><inner></inner></outer>`,그리고나서 `<outer>` 요소가 생성되어 먼저 DOM에 연결된 다음 `<inner>`.
+
+HTML parser가 DOM을 구축하면 부모가 자녀보다 먼저 요소가 차례로 처리됩니다. 
+
+예: `<outer><inner></inner></outer>`,그리고나서 `<outer>` 요소가 생성되어 먼저 DOM에 연결된 다음 `<inner>`.
 
 이는 맞춤형 요소에 중요한 결과로 이어집니다.
 
-예를 들어, 사용자 지정 요소가 액세스를 시도하는 경우 `innerHTML` 인 `connectedCallback`, 아무것도 얻지 못합니다:
+예를 들어, 사용자 지정 요소가 액세스를 시도하는 경우 `connectedCallback`안의 `innerHTML`이 아무것도 얻지 못하는 결과를 확인해봅시다. 
+
+
+아무것도 얻지 못하는 결과:
 
 ```js
 <script>
@@ -238,7 +243,7 @@ customElements.define('user-info', class extends HTMLElement {
 
 실행하면 `alert`는 비어 있습니다.
 
-바로 그 stage에 자식이 없고 돔이 미완성이기 때문입니다. HTML 파서가 사용자 지정 요소에 연결되었습니다. `<user-info>`, 그리고 자식들에게 진행할 예정이지만 아직 진행하지 않았습니다.
+바로 그 stage에 자식이 없고 돔이 미완성이기 때문입니다. HTML 파서가 사용자 지정 요소에 연결되었습니다. `<user-info>`, 그리고 자식들에게 진행할 예정이지만 아직 진행되지 않았습니다.
 
 사용자 지정 요소에 정보를 전달하려면 속성을 사용할 수 있습니다. 즉시 사용할 수 있습니다.
 
@@ -262,7 +267,7 @@ customElements.define('user-info', class extends HTMLElement {
 
 이제 `alert` 줄을 서서 `(*)` 는 HTML 구문 분석이 완료된 후 비동기식으로 실행할 때 "John"을 보여줍니다. 필요한 경우 자식을 처리하고 초기화를 완료할 수 있습니다.
 
-반면에 이 솔루션도 완벽하지 않습니다. 중첩된 사용자 지정 요소도 `setTimeout`을 사용합니다. 스스로 초기화한 다음 줄을 서 있습니다: 외부 `setTimeout` 먼저 트리거하고 내부 트리거를 트리거합니다.
+반면에 이 솔루션도 완벽하지 않습니다. 중첩된 사용자 지정 요소도 `setTimeout`을 사용합니다. 스스로 초기화한 다음 줄을 서 있습니다: 외부 `setTimeout`을 먼저 트리거하고 내부 트리거를 트리거합니다.
 
 따라서 외부 요소는 내부 요소보다 먼저 초기화를 완료합니다.
 
@@ -291,16 +296,16 @@ customElements.define('user-info', class extends HTMLElement {
 
 외부 요소가 초기화를 완료하는 것을 명확하게 볼 수 있습니다. (3) 내면의 것 앞에 (4).
 
-중첩된 요소가 준비된 후 트리거되는 내장 콜백은 없습니다. 필요한 경우 자체적으로 구현할 수 있습니다. 예를 들어, 내부 요소는 다음과 같은 이벤트를 디스패치할 수 있습니다. `initialized`, 그리고 바깥쪽 사람들은 귀를 기울이고 반응할 수 있습니다.
+중첩된 요소가 준비된 후 트리거되는 내장 콜백은 없습니다. 필요한 경우 자체적으로 구현할 수 있습니다. 예를 들어, 내부 요소는 `initialized`과 같은 이벤트를 디스패치할 수 있습니다.  그리고 바깥쪽 사람들은 귀를 기울이고 반응할 수 있습니다.
 
 ---
 
 ## Customized built-in elements 맞춤형 내장 요소
 
 
-다음과 같은 새로운 요소를 생성합니다. `<time-formatted>`, 연관된 의미론이 없습니다. 검색 엔진에는 알려지지 않았으며 접근성 장치로는 이를 처리할 수 없습니다.
+`<time-formatted>`과 같은 새로운 요소를 생성합니다. 이것에는 연관된 의미론이 없습니다. 검색 엔진에는 알려지지 않았으며 접근성 장치로는 이를 처리할 수 없습니다.
 
-하지만 그런 것들이 중요할 수 있습니다. 예를 들어, 검색 엔진은 실제로 시간을 표시한다는 사실에 관심이 있을 것입니다. 특별한 종류의 버튼을 만들고 있다면 기존 버튼을 재사용하는 것은 어떨까요? `<button>` 기능?
+하지만 그런 것들이 중요할 수 있습니다. 예를 들어, 검색 엔진은 실제로 시간을 표시한다는 사실에 관심이 있을 것입니다. 특별한 종류의 버튼을 만들고 있다면 기존 버튼을 재사용하는 것은 어떨까요? `<button>` 기능처럼요.
 
 클래스에서 상속하여 내장된 HTML 요소를 확장하고 사용자 지정할 수 있습니다.
 
@@ -318,10 +323,13 @@ class HelloButton extends HTMLButtonElement { /* custom element methods */ }
 customElements.define('hello-button', HelloButton, {extends: 'button'});
 ```
 
-동일한 DOM 클래스를 공유하는 태그가 다를 수 있으므로 다음을 지정합니다. `extends `필요합니다.
+동일한 DOM 클래스를 공유하는 태그가 다를 수 있으므로 필요한 `extends `를 지정합니다. 
 
 
-3. 마지막에 사용자 지정 요소를 사용하려면 일반 요소를 삽입합니다. `<button>` 태그하지만 추가 is=`"hello-button"` 그것으로:
+3. 마지막에 사용자 지정 요소를 사용하려면 일반 요소 `<button>` 를 삽입합니다. 추가로 태그 안에 is=`"hello-button"`을 설정합니다.
+
+
+결과:
 
 ```js
 <button is="hello-button">...</button>
@@ -351,8 +359,7 @@ customElements.define('hello-button', HelloButton, {extends: 'button'});
 
 <button is="hello-button" disabled>Disabled</button>
 
-새로운 버튼은 내장 버튼을 확장합니다. 따라서 다음과 같은 스타일과 표준 기능을 유지합니다. `disabled` 기여하다.
-
+새로운 버튼은 내장 버튼을 확장합니다. 따라서 `disabled` 과 같은 스타일과 표준 기능을 유지합니다. 
 ---
 
 References
