--- a/core/4.객체-기본/4-1 객체/객체.md
+++ b/core/4.객체-기본/4-1 객체/객체.md
@@ -15,17 +15,27 @@ let user = {}; // '객체 리터럴' 문법 <- 주로 이방법 사용
 
 객체는 몇 가지 특수한 기능을 가진 연관 배열(associative array)입니다.
 
-객체는 프로퍼티(키-값 쌍)을 저장한다.
+## 객체는 프로퍼티(키-값 쌍)을 저장한다.
 
 - 프로퍼티 키는 문자열이나 심볼이어야 한다. 보통은 문자열.
 - 값은 어떤 자료형도 가능합니다
 
-프로퍼티 접근 법
+## 프로퍼티 접근 법
 
 - 점 표기법 : obj.property
 - 대괄호 표기법 : obj["property"]. 대괄호 표기법을 사용하면 obj[varWithKey] 같이 변수에서 키를 가져올 수 있다.
 
-객체 추가 연산자
+- 동적 할당 가능
+
+```js
+var result = {}; // 빈 객체 생성
+var char = "d"; // 변수 char에 "d" 저장
+result[char] = 1; // result["d"] = 1; 으로 동적으로 키 "d"를 추가하고 값 1을 할당
+
+console.log(result); // { d: 1 }
+```
+
+## 객체 추가 연산자
 
 - 프로퍼티 삭제 delete obj.prop
 - 해당 key를 가진 프로퍼티가 객체 내에 있는 지 확인 - "key" in obj
