--- a/core/5.자료구조와 자료형/5-4 배열/배열메서드.md
+++ b/core/5.자료구조와 자료형/5-4 배열/배열메서드.md
@@ -237,3 +237,22 @@ items.sort(function (a, b) {
 > 배열의 마지막 요소는 객체와 마찬가지로 쉼표로 끝날 수 있다.
 
 ---
+
+## 인자 배열 한 세트로 호출 
+
+    Function. prototype.apply
+
+this 지정 + 인자 배열 한 세트로 호출
+
+ex)`Math.max.apply(null, arr)`
+## 인자 펼치기 
+
+스프레드 문법
+
+    ...
+
+this 지정x + 인자 펼치기
+
+ex)`Math.max(...arr)`
+
+    
